# vllm-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  config.json  docker-compose.yml  pyproject.toml  test_functionality.py  test_setup.py  test_simple.py
examples/: client_example.py  list_models.py  mcp_client_config.json
scripts/: start-dev.sh  start.sh
src/vllm_mcp/: __init__.py  models.py  server.py
src/vllm_mcp/providers/: __init__.py  dashscope_provider.py  openai_provider.py
